Fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -336,21 +336,25 @@ footer {
   /* Navigation */
   #nav-items {
     display: none;
+    z-index: 15;
   }
 
   .active {
     display: block;
+    z-index: 20;
   }
 
   #nav-items.responsive {
     display: flex;
     flex-direction: column;
     background-color: black;
+    position: relative;
   }
 
   /* Home page */
   #intro {
     left: 10%;
+    z-index: 0;
   }
 
   .proj {
